src/test/ui/parser/issue-6610.stderr
error: expected one of `->`, `;`, `where`, or `{`, found `}`
  --> $DIR/issue-6610.rs:1:20
   |
LL | trait Foo { fn a() }
   |           -        ^
   |           |        |
   |           |        expected one of `->`, `;`, `where`, or `{`
   |           |        the item list ends here
   |           while parsing this item list starting here

error: aborting due to previous error

